--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -121,21 +121,6 @@
     display: flex;
     gap: 1em;
 
-    @media screen and (max-width: 1024px) {
-      gap: 0.5em;
-    }
-
-    @media screen and (min-width: 768px) {
-      .btn-menu {
-        display: none;
-      }
-    }
-    @media screen and (max-width: 768px) {
-      .btn-headernav:not(.btn-menu) {
-        display: none;
-      }
-    }
-
     .btn-headernav {
       text-transform: uppercase;
       color: var(--black);
@@ -260,6 +245,23 @@
       svg {
         width: 40px;
         height: 40px;
+      }
+    }
+    @media screen and (max-width: 1024px) {
+      gap: 0.5em;
+    }
+
+    @media screen and (min-width: 768px) {
+      .btn-menu {
+        display: none;
+      }
+    }
+    @media screen and (max-width: 768px) {
+      .btn-headernav:not(.btn-menu) {
+        display: none;
+      }
+      .hasdrop {
+        display: none;
       }
     }
   }
