Add artist position fix

--- a/src/app/commissions/prices/prices.scss
+++ b/src/app/commissions/prices/prices.scss
@@ -228,6 +228,7 @@
       }
     }
     .top-pricing {
+      margin-bottom: 100px;
       .price-heading {
         .sizing {
           @media screen and (min-width: 768px) {
