--- a/src/app/artists/artists.scss
+++ b/src/app/artists/artists.scss
@@ -50,7 +50,8 @@
         img {
           width: 100%;
           height: 400px;
-          scale: 1.2;
+          scale: 1;
+          // background: red;
           object-fit: contain;
           @media screen and (max-width: 420px) {
             height: 400px;
