--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -744,7 +744,7 @@
           //   width: 887.78px;
           // }
           @media screen and (max-width: 550px) {
-            width: 200px;
+            // width: 200px;
             height: 300px;
           }
           object-fit: cover;
