--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -568,12 +568,12 @@
           width: 300px;
           object-fit: contain;
           &.l {
-            right: -100px;
-            top: -190px;
+            right: -120px;
+            top: -120px;
           }
           &.r {
-            bottom: -180px;
-            left: -150px;
+            bottom: -280px;
+            left: -180px;
             rotate: 10deg;
             scale: 1.1;
           }
@@ -583,6 +583,7 @@
           border-radius: 5em 0 5em 0;
           overflow: hidden;
           position: relative;
+          background: white;
           &::before {
             box-shadow: inset 10px 0px 120px 30px #062e48;
             content: "";
@@ -597,6 +598,7 @@
           width: 100%;
           height: 400px;
           object-fit: cover;
+          object-position: 20% 10%;
         }
       }
     }
