Add some fix and video url support

--- a/src/app/artists/artists.scss
+++ b/src/app/artists/artists.scss
@@ -283,6 +283,11 @@
                   width: 100%;
                   object-fit: cover;
                   cursor: pointer;
+
+                  &.iframe {
+                    outline: none;
+                    border: none;
+                  }
                 }
 
                 &:hover,
