--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -2,6 +2,12 @@
   // overflow-y: hidden;
   max-height: 100vh;
   position: relative;
+
+  // @media screen and (max-width: 768px) {
+  //   padding-bottom: 200px;
+  //   max-height: none;
+  //   height: 100%;
+  // }
   #portfolio-display {
     width: 100%;
     height: 100%;
@@ -292,6 +298,14 @@
         display: flex;
         padding: 0.25em 1em;
         box-sizing: 0px 0px 4px var(--black);
+      }
+      @media screen and (max-width: 1280px) {
+        right: 10%;
+      }
+      @media screen and (max-width: 768px) {
+        // right: 10%;
+        left: 10%;
+        right: initial;
       }
     }
   }
