--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -268,7 +268,14 @@
               user-select: none;
               pointer-events: none;
 
+              // &:not(:has(iframe)) {
               box-shadow: inset 0px 0px 40px 20px #283f58;
+              // }
+            }
+            &:has(iframe) {
+              &::before {
+                display: none;
+              }
             }
             position: relative;
             .main-pt {
@@ -278,6 +285,10 @@
               object-fit: cover;
               height: 100%;
               box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.193);
+              iframe {
+                width: 100%;
+                height: 100%;
+              }
             }
             video.main-pt {
               z-index: 10;
