--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -411,7 +411,23 @@
       }
     }
   }
-
+  .vid-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-top: -250px;
+    .video-trailer {
+      width: 100%;
+      max-width: min(500px, 80%);
+      margin: 0 auto;
+      aspect-ratio: 16/9;
+      border: 4px solid var(--gold);
+      box-shadow: 0px 0px 4px var(--altBlue);
+      width: 100%;
+    }
+  }
   #timeline {
     padding-top: 300px;
     .confine {
