--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -291,6 +291,10 @@
               iframe {
                 width: 100%;
                 height: 100%;
+                scale: 1;
+                // user-select: none;
+                // pointer-events: all;
+                // display: none;
               }
             }
             video.main-pt {
