--- a/src/app/(frontend)/globals.scss
+++ b/src/app/(frontend)/globals.scss
@@ -288,3 +288,49 @@ iframe {
   object-fit: cover;
   // object-fit: fill;
 }
+
+#lscreen {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  z-index: 2000;
+  background: #ecf8ffe5;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #262b2d;
+  opacity: 0;
+  user-select: none;
+  pointer-events: none;
+  animation: fade-in 0.2s ease-in-out forwards;
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  svg {
+    width: 40px;
+    height: 40px;
+    animation: speen 1.5s infinite ease-in-out;
+    @keyframes speen {
+      from {
+        rotate: 0deg;
+      }
+      to {
+        rotate: 360deg;
+      }
+    }
+  }
+  font-size: 1.4rem;
+  p {
+    font-weight: bold;
+    color: #0e81a5;
+  }
+  height: 100%;
+  backdrop-filter: blur(2px);
+}
