Add revalidate api fix for link category and rigging

--- a/src/app/(frontend)/artists/artists.scss
+++ b/src/app/(frontend)/artists/artists.scss
@@ -318,6 +318,14 @@
                   width: 100%;
                   object-fit: cover;
                   height: 200px;
+                  &.video {
+                    aspect-ratio: 16 /9;
+                    width: 100%;
+                    height: auto;
+                  }
+                }
+                &:has(.p-img.video) {
+                  display: flex;
                 }
               }
 
